fix core dump caused by can_discard_replica_op() when sending osd not exist in osdmap

please see http://tracker.ceph.com/issues/21006 for details

Signed-off-by: sheng qiu <sheng.qiu@alibaba-inc.com>